Modify layout issue#15

--- a/app/assets/stylesheets/tour.css.scss
+++ b/app/assets/stylesheets/tour.css.scss
@@ -2,6 +2,17 @@
   text-align: center;
 }
 
+/* select */
+.title {
+	margin: 80px 0;
+}
+
+.pic .right{
+	margin-left: 150px;
+}
+
+/* tour */
+
 h2 {
   margin: 80px 0;
   padding: 0;
